--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="A SAAS website" />
 
-    <title>AiworkSquad</title>
+    <title>Covenant</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
